--- a/week09/less_code/src/style/index.css
+++ b/week09/less_code/src/style/index.css
@@ -13,3 +13,25 @@ body,
   width: 100%;
   height: 100%;
 }
+
+#app {
+  display: flex;
+}
+
+.area {
+  width: 200px;
+  height: 100%;
+  border-right: 1px solid #ccc;
+}
+
+.area-single {
+  width: 100%;
+  line-height: 40px;
+  text-align: center;
+  border-bottom: 1px solid #ccc;
+  cursor: pointer;
+}
+
+.show {
+  flex: 1;
+}
